Development Portal (2019-10-31 shi)
==============================
Result data in dflat


Development Portal (2019-10-30 shi)
==============================
Add default modalities with hover titles
Group sectors in graph
Group transactions
Clean up element count


Development Portal (2019-10-29 shi)
==============================
Add sector table
Update SAVi transaction and budget tables


Development Portal (2019-10-28 shi)
==============================
Sticky headers and counters for tables
Update SAVi with dflat
Add test savi xml for json conversion
Add codelist mapping to dflat
Add title hover text with description
Change sortable to string
Add multicolumn sorting


Development Portal (2019-10-27 shi)
==============================
Add all elements in org file for SAVi
Update css
Add new test org xml for json conversion
Add base64 sort arrow image for tables
Add counter increment counts to headers


Development Portal (2019-10-26 shi)
==============================
Update org test layout for SAVi


Development Portal (2019-09-5 shi)
==============================
Add beige alert for upload
Update css


Development Portal (2019-08-22 shi)
==============================
Update landing page link
Update css


Development Portal (2019-07-20 shi)
==============================
Add Version 1 banner notice to SAVi
Updated print-friendly css
Add Sector vocab 2 as DAC to SAVi
Add "true" as boolean for humanitarian
Add new iati-codes for import


Development Portal (2019-07-18 shi)
==============================
Sticky labels for D-Portal-Logs


Development Portal (2019-07-11 shi)
==============================
Replace IS with brackets for policy-markers search filter
Updated D-Portal-Logs


Development Portal (2019-03-22 shi)
==============================
Update and fix recipient-region display
Hide empty location points
Update print-friendly css


Development Portal (2019-03-20 shi)
==============================
Display language code of document-links in SAVi