@@ -81,26 +81,33 @@ a.a_iati-identifier:visited	{color:#000;}
 a.a_iati-identifier:hover	{color:#000; text-decoration:underline;}
 a.a_iati-identifier:active	{color:#000;}
 a.a_xml_iati-identifier,
+a.a_download,
 a.a_logs,
-a.a_slug{display:inline-block; vertical-align:baseline; box-sizing:border-box; border-radius:4px; border:1px solid #000; text-align:center; font-size:16px; font-variant:all-small-caps; padding:5px 0;  margin:10px 2% 5px 0;}
-a.a_xml_iati-identifier	{width:31.33%;}
+a.a_slug				{display:inline-block; vertical-align:baseline; box-sizing:border-box; border-radius:4px; border:1px solid #000; text-align:center; font-size:16px; font-variant:all-small-caps; padding:5px 0;  margin:10px 2% 5px 0;}
+a.a_xml_iati-identifier	{width:20%;}
 a.a_xml_iati-identifier:before	{content:"VIEW SOURCE"; font-size:16x; color:#000; display:inline-block; vertical-align:baseline; padding-right:5px;}
 a.a_xml_iati-identifier:link	{color:#000;}
 a.a_xml_iati-identifier:visited	{color:#000;}
 a.a_xml_iati-identifier:hover	{color:#000; text-decoration:underline;}
 a.a_xml_iati-identifier:active	{color:#000;}
-a.a_logs				{width:32.33%;}
+a.a_logs				{width:20%;}
 a.a_logs:before			{content:"VIEW DATASET"; font-size:16px; color:#000; display:inline-block; vertical-align:baseline; padding-right:5px;}
 a.a_logs:link			{color:#000;}
 a.a_logs:visited		{color:#000;}
 a.a_logs:hover			{color:#000; text-decoration:underline;}
 a.a_logs:active			{color:#000;}
-a.a_slug				{width:32.33%; margin-right:0;}
+a.a_slug				{width:28%; margin-right:0;}
 a.a_slug:before			{content:"VIEW IATI REGISTRY"; font-size:16px; color:#000; display:inline-block; vertical-align:baseline; padding-right:5px;}
 a.a_slug:link			{color:#000;}
 a.a_slug:visited		{color:#000;}
 a.a_slug:hover			{color:#000; text-decoration:underline;}
 a.a_slug:active			{color:#000;}
+a.a_download			{width:12%;}
+a.a_download:before		{content:"VIEW"; font-size:16px; color:#000; display:inline-block; vertical-align:baseline; padding-right:5px;}
+a.a_download:link		{color:#000;}
+a.a_download:visited	{color:#000;}
+a.a_download:hover		{color:#000; text-decoration:underline;}
+a.a_download:active		{color:#000;}
 
 
 /*	Recipient countries
