@@ -351,6 +351,7 @@ a.a_iati-identifier:visited		{color:rgba(186,12,47,1);}
 a.a_iati-identifier:hover		{color:rgba(163,0,13,1);}
 a.a_iati-identifier:active		{color:rgba(186,12,47,1);}
 a.a_xml_iati-identifier,
+a.a_download,
 a.a_logs,
 a.a_slug						{background-color:rgba(235,235,235,0.8);}
 a.a_xml_iati-identifier:link	{color:rgba(186,12,47,1);}
@@ -370,6 +371,12 @@ a.a_slug:visited				{color:rgba(186,12,47,1);}
 a.a_slug:hover					{color:rgba(163,0,13,1);}
 a.a_slug:active					{color:rgba(186,12,47,1);}
 a.a_slug:before					{color:rgba(85,85,85,1);}
+a.a_download					{color:rgba(186,12,47,1);}
+a.a_download:link				{color:rgba(186,12,47,1);}
+a.a_download:visited			{color:rgba(186,12,47,1);}
+a.a_download:hover				{color:rgba(163,0,13,1);}
+a.a_download:active				{color:rgba(186,12,47,1);}
+a.a_download:before				{color:rgba(85,85,85,1);}
 
 
 /*	Recipient countries
