@@ -340,6 +340,7 @@ a.a_iati-identifier:visited		{color:rgba(206,131,0,1);}
 a.a_iati-identifier:hover		{color:rgba(255,163,0,1);}
 a.a_iati-identifier:active		{color:rgba(206,131,0,1);}
 a.a_xml_iati-identifier,
+a.a_download,
 a.a_logs,
 a.a_slug						{background-color:rgba(65,65,65,0.7);}
 a.a_xml_iati-identifier:link	{color:rgba(206,131,0,1);}
@@ -359,6 +360,12 @@ a.a_slug:visited				{color:rgba(206,131,0,1);}
 a.a_slug:hover					{color:rgba(255,163,0,1);}
 a.a_slug:active					{color:rgba(206,131,0,1);}
 a.a_slug:before					{color:rgba(204,204,204,1);}
+a.a_download					{color:rgba(206,131,0,1);}
+a.a_download:link				{color:rgba(206,131,0,1);}
+a.a_download:visited			{color:rgba(206,131,0,1);}
+a.a_download:hover				{color:rgba(255,163,0,1);}
+a.a_download:active				{color:rgba(206,131,0,1);}
+a.a_download:before				{color:rgba(204,204,204,1);}
 
 
 /*	Recipient countries
